# Serialization

./: .gitignore  BUILD_OPTIMIZATION_GUIDE.md  CMakeLists.txt  CTEST_USAGE.md  README.md
.claude/: settings.local.json
cmake/: XSigmaSerializationConfig.cmake.in  cache.cmake  clang_tidy.cmake  coverage.cmake  spell.cmake
include/: serialization.cpp  serialization.cxx  serialization.h  serialization_impl.h
include/Testing/: CMakeLists.txt
include/Testing/Cxx/: CMakeLists.txt  TestBinarySerialization.cpp  TestBinarySerialization.cxx  TestFpmlSerialization.cpp  TestFpmlSerialization.cpp.bak  TestJsonSerialization.cpp  TestJsonSerialization.cxx  TestXmlSerialization.cpp  fpml_example_from_claud.xml
include/common/: archiver_wrapper.cpp  archiver_wrapper.cxx  archiver_wrapper.h  compile_time_helpers.h  export.h  helper.cxx  helper.h  macros.h  reflection.h  serialization_concepts.h  serialization_macros.h  serialization_type_traits.h
include/parallel/: parallel.cpp  parallel.h  parallel_guard.cpp  parallel_guard.h  thread_name.cpp  thread_name.h  thread_pool.cpp  thread_pool.h
include/util/: configure.h  exception.h  export.h  flat_hash.h  macros.h  multi_process_stream.cxx  multi_process_stream.h  pointer.h  registry.h  string_util.cpp  string_util.h
util/: registry.h
